plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.11'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.carely'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral() // 기본 Maven Central
	google()       // Google Maven Repository 추가
	maven {
		url "https://maven.google.com"
	}
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// swagger
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// json
	implementation 'org.json:json:20210307'

	// websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// OCR
	implementation 'com.google.cloud:google-cloud-vision:3.17.0'


	implementation 'com.squareup.okhttp3:okhttp:4.11.0'


	implementation 'org.web3j:core:4.8.7'

	//주민등록 진위여부 확인
	// Jackson Databind
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
	// Commons Codec
	implementation 'commons-codec:commons-codec:1.14'
	// Commons IO
	implementation 'commons-io:commons-io:2.7'


	// 캐시
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'


}

tasks.named('test') {
	useJUnitPlatform()
}
